frontend: ensure no overflow of editor panel
always the same size i guess

--- a/frontend/style.css
+++ b/frontend/style.css
@@ -194,7 +194,7 @@ audio::-webkit-media-controls-time-remaining-display {
 	left: 0;
 	top: 0;
 	bottom: 80px;
-	min-width: 380px;
+	width: 380px;
 	overflow-y: auto;
 	padding: 20px;
 }
